[workspace]
resolver = "2"
default-members = ["day6"]

members = [
    "day1",
    "day2",
    "day3",
    "day3_part_2",
    "day4",
    "day4_part_2",
    "day5",
    "day6",
    "day7",
    "day7_part_2",
    "day8",
    "day8_part_2",
    "day9",
    "day10",
    "day13",
    "day_x",
    "utilities",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
itertools = "0.12.0"
maplit = "1.0.2"
reqwest = "0.11"
tokio = "1"
