[package]
name = "day17"
edition.workspace = true
version.workspace = true

[dependencies]
itertools = { workspace = true, features = [] }
maplit = { workspace = true, features = [] }
reqwest = { workspace = true, features = ["default-tls"] }
utilities = { path = "../utilities" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
