[package]
name = "day3"
edition.workspace = true
version.workspace = true

[dependencies]
itertools = { workspace = true, features = [] }
maplit = { workspace = true, features = [] }
bit-matrix = "0.6.1"
utilities = { path = "../utilities" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
