[package]
name = "day3_part_2"
edition.workspace = true
version.workspace = true

[dependencies]
itertools = { workspace = true, features = [] }
maplit = { workspace = true, features = [] }
bit-matrix = "0.6.1"
petgraph = "0.6.4"
utilities = { path = "../utilities" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
