[package]
name = "day5"
edition.workspace = true
version.workspace = true

[dependencies]
itertools = { workspace = true, features = [] }
maplit = { workspace = true, features = [] }
sorted-vec = "0.8.3"
utilities = { path = "../utilities" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
