[package]
name = "day8_part_2"
edition.workspace = true
version.workspace = true

[dependencies]
bitvec = "1.0.1"
itertools = { workspace = true, features = [] }
maplit = { workspace = true, features = [] }
num = "0.4.1"
utilities = { path = "../utilities" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
